[package]
name = "taskach-backend"
version = "0.1.0"
authors = ["NumbleFingers <numfin>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"

juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master", features = ["expose-test-schema"] }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
dotenv = "0.15.0"
uuid = { version = "=0.8.1", features = ["serde", "v4"] }
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "chrono"] }
chrono = "0.4.13"
