[package]
name = "taskach-backend"
version = "0.1.0"
authors = ["NumbleFingers <numfin>"]
edition = "2018"

[dependencies]
env_logger = "^0.8"
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rust-argon2 = "^0.8"
jwt = "^0.11"
hmac = "^0.9"
sha2 = "^0.9"

# graphql
actix-web = { version = "3", features = ["rustls"] }
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["expose-test-schema"] }
juniper_actix = { git = "https://github.com/graphql-rust/juniper" }

# firestore/grpc
googapis = { git = "https://github.com/mechiru/googapis", features = ["google-firestore-v1"] }
gouth = { version = "^0.1" }
tonic = { version = "^0.3", features = ["tls"] }
prost-types = { version = "^0.6" }

async-trait = "^0.1.39"
thiserror = "^1.0"
